force-app/main/default/objects/Transcation__c/fields/date_journey__c.field-meta.xml
<CustomField>
    <fullName>date_journey__c</fullName>
    <label>date_journey</label>
    <type>Date</type>
</CustomField>