force-app/main/default/objects/Transcation__c/fields/date_transaction__c.field-meta.xml
<CustomField>
    <fullName>date_transaction__c</fullName>
    <label>date_transaction</label>
    <type>Date</type>
</CustomField>