force-app/main/default/objects/Transcation__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First_name</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Transcatons</relationshipLabel>
    <relationshipName>Transcatons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>