force-app/main/default/objects/Transcation__c/fields/flight_from__c.field-meta.xml
<CustomField>
    <fullName>flight_from__c</fullName>
    <label>flight_from</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Transcatons</relationshipLabel>
    <relationshipName>Transcatons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>