force-app/main/default/objects/Transcation__c/fields/flight_to__c.field-meta.xml
<CustomField>
    <fullName>flight_to__c</fullName>
    <formula>flight_from__r.flight_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>flight_to</label>
    <type>Text</type>
</CustomField>