force-app/main/default/objects/Transcation__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <formula>First_name__r.Last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last_name</label>
    <type>Text</type>
</CustomField>