force-app/main/default/objects/Transcation__c/fields/Loc_id__c.field-meta.xml
<CustomField>
    <fullName>Loc_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loc_id</label>
    <referenceTo>location__c</referenceTo>
    <relationshipLabel>Transcatons</relationshipLabel>
    <relationshipName>Transcatons</relationshipName>
    <type>Lookup</type>
</CustomField>