force-app/main/default/objects/Transcation__c/fields/Transcation_type__c.field-meta.xml
<CustomField>
    <fullName>Transcation_type__c</fullName>
    <label>Trans_type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>reserve</fullName>
            </value>
            <value>
                <fullName>cancelation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>