force-app/main/default/objects/Transcation__c/validationRules/no_seat_available.validationRule-meta.xml
<ValidationRule>
    <fullName>no_seat_available</fullName>
    <active>true</active>
    <errorConditionFormula>AND( flight_from__r.vacant_seats__c   =  0,  ISPICKVAL(Transcation_type__c , &quot;reserve&quot;) )</errorConditionFormula>
    <errorMessage>no more seat available</errorMessage>
</ValidationRule>