force-app/main/default/objects/Transcation__c/validationRules/transcation_not_more_than_journey.validationRule-meta.xml
<ValidationRule>
    <fullName>transcation_not_more_than_journey</fullName>
    <active>true</active>
    <errorConditionFormula>date_transaction__c   &gt;   date_journey__c</errorConditionFormula>
    <errorDisplayField>date_transaction__c</errorDisplayField>
    <errorMessage>date of transcation cannot more then date of journey</errorMessage>
</ValidationRule>